testcases/bad/test49.tig
/* Error: syntax(parse) error, nil should not be preceded by type-id. */

let
    type rectype = {name:string, id:int}

    var a:= rectype nil
in
    a
end
